# aerial

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/aerial/: aeMain.cpp  pch.h
engine/aerial/debug/: aeDebugMenu.cpp  aeDebugMenu.h  aeLog.cpp  aeLog.h  aeTracy.h
engine/aerial/framework/: aeApplication.cpp  aeApplication.h
engine/aerial/render/: aeHydraRenderer.cpp  aeHydraRenderer.h  aeVulkan.cpp  aeVulkan.h
engine/aerial/scene/: aeScene.cpp  aeScene.h
engine/aerial/scripting/: aeGameCamera.cpp  aeGameCamera.h  aeGameInput.cpp  aeGameInput.h  aeLua.cpp  aeLua.h
engine/aerial/stubs/: aeStubs.cpp
engine/aerial/system/: aeFilewatcher.cpp  aeFilewatcher.h  aeWorkerPool.cpp  aeWorkerPool.h
res/scripts/: fpsController.lua
tools/: buildOpenUSD.bat
